<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:text="@string/startService"
        android:id="@+id/startService_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/bindService"
        android:id="@+id/bindService_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/unBindService"
        android:id="@+id/unBindService_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/stopService"
        android:id="@+id/stopService_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/getServiceMsg"
        android:id="@+id/getServiceMsg_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/clear"
        android:id="@+id/clear_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:text="@string/innerCalls"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/inner_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Services" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:text="@string/externCalls"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/extern_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Services" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>